# VNFinverter

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: index.md  mkdocs.yml  requirements.txt
vnfinverter/: __main__.py  cli.py  converter.py  parser.py  statement.py
