[project]
name = "vnfinverter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
dependencies = [
	"loguru",
	"pdfplumber",
	"pandas",
	"ofxtools"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "NONE"}


[project.scripts]
vnfinverter = "vnfinverter.cli:main"

[tool.pdm.dev-dependencies]
dependencies = [
	"ruff",
	"pandas-stubs",
	"pytest"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "A", "I", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
