[project]
name = "vnfinverter"
version = "0.1.0"
description = "Convert pdf files from Vietnamese banks to standard financial format"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
dependencies = [
	"loguru",
	"pdfplumber",
	"pandas",
	"ofxtools",
	"typer"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "NONE"}


[project.scripts]
vnfinverter = "vnfinverter.cli:app"

[tool.pdm.dev-dependencies]
dependencies = [
	"ruff",
	"pandas-stubs",
	"pytest"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "A", "I", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
