[project]
name = "vnfinverter"
version = "0.1.0"
description = "Convert pdf files from Vietnamese banks to standard financial format"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
dependencies = [
	"loguru>=0.7.3",
	"pdfplumber>=0.11.7",
	"pandas>=2.3.2",
	"ofxtools>=0.9.5",
	"typer>=0.19.2",
	"openpyxl>=3.1.5",
	"pydantic>=2.11.9"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "NONE"}

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings-python>=1.18.2",
]

[project.scripts]
vnfinverter = "vnfinverter.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "A", "I", "B", "C4"]

[tool.ruff.format]
quote-style = "double"

